# flow-agents

./: .gitignore  .gitleaksignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  README.md  console.telemetry.json  install.sh  node_modules  package-lock.json  package.json  tsconfig.json  veritas.claims.json
.datum/: config.json
.flow-agents/: lifecycle-authority-keys.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml
.veritas/: README.md  repo-map.json
agent-cards/: dev.json
agents/: dev.json  tool-code-reviewer.json  tool-dependencies-updater.json  tool-explore-config.json  tool-explore-deps.json  tool-explore-entry.json  tool-explore-patterns.json  tool-explore-structure.json  tool-explore-tests.json  tool-planner.json  tool-playwright.json  tool-security-reviewer.json  tool-verifier.json  tool-worker.json
context/: base-rules.md  code-review-standards.md  coding-standards.md  development-workflow.md  gate-awareness.md
delivery/: DECLARED  README.md  trust.bundle  trust.checkpoint.intoto.json  trust.checkpoint.json
docs/: _config.yml  agent-system-guidebook.md  agent-usage-feedback-loop.md  architecture-engine-and-kits.md  configurable-workflow-routing.md  context-map.md  coordination-guide.md  developer-hook-setup.md  (+30 more)
integrations/strands/: README.md  example.py  pyproject.toml
integrations/strands/examples/: knowledge_kit_live.py
integrations/strands/flow_agents_strands/: __init__.py  hooks.py  policy.py  steering.py  telemetry.py
integrations/strands/tests/: test_hooks.py  test_policy.py  test_telemetry.py  test_usage.py
(+1214 files in other folders)
